# learn_c-

./: CMakeLists.txt  main.cpp
C++/: Polyhead.h  Polymorphism.cpp
